--- a/cinesweeper/cinesweeper.vcxproj.filters
+++ b/cinesweeper/cinesweeper.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="cinesweeper.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\OneDrive\문서\GitHub\cinesweeper\Game.cpp">
+    <ClCompile Include="Game.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\OneDrive\문서\GitHub\cinesweeper\Position.cpp">
+    <ClCompile Include="Position.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Start.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +32,10 @@
     <ClInclude Include="Game.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\OneDrive\문서\GitHub\cinesweeper\Position.h">
+    <ClInclude Include="Position.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Start.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
